--- a/css/style.css
+++ b/css/style.css
@@ -527,7 +527,7 @@ body {
   transition: all .2s
 }
 .item-buy:nth-child(1)._watcher-view {
-  transition: all .8s ease;
+  transition: all .8s ease .3s;
   -webkit-transform: translate(0,0);
   transform: translate(0,0);
   opacity: 1
@@ -539,7 +539,7 @@ body {
   transition: all .2s
 }
 .item-buy:nth-child(2)._watcher-view {
-  transition: all .8s ease;
+  transition: all .8s ease .3s;
   -webkit-transform: translate(0,0);
   transform: translate(0,0);
   opacity: 1
@@ -551,7 +551,7 @@ body {
   transition: all .2s
 }
 .item-buy:nth-child(3)._watcher-view {
-  transition: all .8s ease;
+  transition: all .8s ease .3s;
   -webkit-transform: translate(0,0);
   transform: translate(0,0);
   opacity: 1
@@ -563,7 +563,7 @@ body {
   transition: all .2s
 }
 .item-buy:nth-child(4)._watcher-view {
-  transition: all .8s ease;
+  transition: all .8s ease .3s;
   -webkit-transform: translate(0,0);
   transform: translate(0,0);
   opacity: 1
