--- a/css/style.css
+++ b/css/style.css
@@ -540,15 +540,14 @@ body {
 .item-buy:nth-child(1)::after {
   content: "";
   position: absolute;
-  top: -7rem;
-  left: -7rem;
+  border-radius: 50%;
   width: 15rem;
   height: 15rem;
-  background-color: hsla(1,100%,61%,.5);
-  border-radius: 50%;
+  top: -7rem;
+  left: -7rem;
+  background-color: hsla(1,100%,61%,.3);
   -webkit-filter: blur(100px);
-  filter: blur(100px);
-  z-index: 1
+  filter: blur(100px)
 }
 .item-buy:nth-child(2) {
   -webkit-transform: translate(10%,-10%);
@@ -565,15 +564,14 @@ body {
 .item-buy:nth-child(2)::before {
   content: "";
   position: absolute;
-  top: -7rem;
-  right: -7rem;
+  border-radius: 50%;
   width: 15rem;
   height: 15rem;
-  background-color: hsla(1,100%,61%,.5);
-  border-radius: 50%;
+  top: -7rem;
+  right: -7rem;
+  background-color: hsla(1,100%,61%,.3);
   -webkit-filter: blur(100px);
-  filter: blur(100px);
-  z-index: 1
+  filter: blur(100px)
 }
 .item-buy:nth-child(3) {
   -webkit-transform: translate(-10%,10%);
@@ -590,15 +588,14 @@ body {
 .item-buy:nth-child(3)::before {
   content: "";
   position: absolute;
-  top: -7rem;
-  left: -7rem;
+  border-radius: 50%;
   width: 15rem;
   height: 15rem;
-  background-color: hsla(1,100%,61%,.5);
-  border-radius: 50%;
+  top: -7rem;
+  left: -7rem;
+  background-color: hsla(1,100%,61%,.3);
   -webkit-filter: blur(100px);
-  filter: blur(100px);
-  z-index: 1
+  filter: blur(100px)
 }
 .item-buy:nth-child(4) {
   -webkit-transform: translate(10%,10%);
@@ -615,15 +612,14 @@ body {
 .item-buy:nth-child(4)::before {
   content: "";
   position: absolute;
-  top: -7rem;
-  right: -7rem;
+  border-radius: 50%;
   width: 15rem;
   height: 15rem;
-  background-color: hsla(1,100%,61%,.5);
-  border-radius: 50%;
+  top: -7rem;
+  right: -7rem;
+  background-color: hsla(1,100%,61%,.3);
   -webkit-filter: blur(100px);
-  filter: blur(100px);
-  z-index: 1
+  filter: blur(100px)
 }
 .item-buy__title {
   font-family: "Work Sans";
@@ -769,6 +765,18 @@ body {
   -webkit-transform: translate(0,0);
   transform: translate(0,0);
   opacity: 1
+}
+.tokenomics__item::before {
+  content: "";
+  position: absolute;
+  border-radius: 50%;
+  width: 15rem;
+  height: 15rem;
+  top: -7rem;
+  right: -7rem;
+  background-color: hsla(1,100%,61%,.3);
+  -webkit-filter: blur(100px);
+  filter: blur(100px)
 }
 .item-tokenomics {
   background-color: #fff;
